# flask-arch

./: .env  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
App/: __init__.py
App/api/: __init__.py  routes.py
App/models/: base.py
instance/: data.db
migrations/versions/: e054eb1b67ae_.py
